pemFioi/quickAlgo/quickAlgo-mobileFirst.css
/* ... */
#editorMenu .editorMenuHeader {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 12px 20px;
  z-index: 1;
  text-transform: uppercase;
  font-weight: bold;
}

@media /* Tablets and desktop */
  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
  screen and (min-width: 1024px) {
  #editorMenu {
    width: 250px;
    right: -250px;
  }
  #editorMenu .editorMenuHeader {
    position: static;
  }
}
#editorMenu #closeEditorMenu {
  position: absolute;
  top: 15px;
  right: 15px;
  cursor: pointer;
}
#editorMenu #closeEditorMenu:hover {
  color:#4a90e2;
}
#editorMenu .editorActions {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-transform: uppercase;
}
#editorMenu .editorActions div {
  flex: 1 1 0;
  padding: 20px;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-top: 1px solid #5c5c5c;
  cursor: pointer;
  text-align: center;
}
@media /* Tablets and desktop */
  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
  screen and (min-width: 1024px) {
  #editorMenu .editorActions {
    height: auto;
  }
  #editorMenu .editorActions div {
    flex: 1 1 auto;
  }
}
#editorMenu .editorActions div:first-child {
  border-top-width: 0;
}
#editorMenu .editorActions div:hover {
  color:#4a90e2;
}
#editorMenu .editorActions div span.fas,
#editorMenu .editorActions div span.far {
  font-size: 32px;
}
@media screen and (orientation: landscape) and (max-height: 599px) and (max-width: 1024px) { /* Landscape mobiles */
  #editorMenu .editorActions {
    flex-direction: row;
    flex-wrap: wrap;
  }
  #editorMenu .editorActions div {
    flex: 1 1 50%;
    padding: 20px 0;
    font-size: 10px;
    border-right: 1px solid #5c5c5c;
    border-bottom: 1px solid #5c5c5c;
    margin-bottom: -1px;
  }
  #editorMenu .editorActions div:first-child {
    border-top-width: 1px;
  }
}
#editorMenu #saveUrl {
  display: none;
}
#editorMenu input[type=file] {
  cursor: pointer;
  position: absolute;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 100%;
  opacity: 0;
  -moz-opacity: 0;
  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
}

/************************
  LAYOUT & GENERIC ELEMENTS
*************************/
h2.sectionTitle {
  font-size: 22px;
  font-weight: lighter;
  color: #4a90e2;
  margin: 0;
}
h2.sectionTitle .icon {
  color: #fff;
  background-color: #4a90e2;
  border-radius: 50%;
  width: 2em;
  line-height: 2em;
  text-align: center;
  font-size: 14px;
  vertical-align: text-bottom;
  margin-right: 10px;
}

#task {
  display: flex;
  flex-direction: column;
  justify-content: stretch;
  height: calc(100vh - 40px);
  width: 100vw;
}
#taskContent {
  flex: 2 0 0;
  position: static !important;
  display: flex;
  justify-content: stretch;
}
#introGrid {
  display: flex;
}
#taskIntro {
  padding: 10px 20px;
  overflow: auto;
  color: #9b9b9b;
}
#gridContainer {
  background-color: #fff;
  flex: 1 0 auto;
  width: 100%;
  display: flex;
  flex-direction: column;
}

@media screen and (orientation: portrait) and (max-width: 480px) { /* Low res display */
  .mode-player .blocklyToolboxDiv {
    display: none;
  }
}

@media /* Mobiles */
  screen and (orientation: portrait) and (max-width: 599px) and (max-height: 1023px),
  screen and (orientation: landscape) and (max-height: 599px) and (max-width: 1023px) {
  .mode-player #taskContent {
    flex-direction: column;
  }
  .mode-player #introGrid {
    flex: 1 0 auto;
  }
  .mode-instructions #introGrid {
    flex-direction: column;
    width: 100%;
  }
  .mode-instructions #taskIntro {
    order: 2;
    flex: 1 1 auto;
  }
  .mode-player #taskIntro,
  .mode-instructions #blocklyLibContent,
  .mode-editor #introGrid {
    display: none;
  }
  .mode-player .blocklyToolboxDiv,
  .mode-player #editorBar {
    display: none;
  }
}

@media screen and (orientation: landscape) and (max-height: 599px) and (max-width: 1024px) { /* Landscape mobiles */
  #taskContent {
    background-color: #fff;
  }
  .mode-player #taskContent {
    flex-direction: row;
  }
  .mode-player #introGrid {
    min-width: 0;
    flex: 0 0 50%;
    flex-direction: column;
    justify-content: space-between;
  }
  .mode-instructions #introGrid {
    flex-direction: row;
  }
  #taskIntro {
    background-color: #f1f2f7;
    padding: 15px;
    overflow: auto;
    border-radius: 5px 5px 0 0;
    margin: 10px 10px 0 10px;
  }
  #gridContainer #gridButtonsAfter {
    padding-bottom: 5px;
  }
  .mode-instructions #gridContainer {
    min-width: 0;
    flex: 0 0 50%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }
  .mode-player #blocklyLibContent {
    flex: 0 1 50%;
    min-width: 0;
    margin: 10px 10px 0 10px;
  }
}

@media /* Tablets portrait */
  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px) {

  #taskContent {
    flex-direction: column;
  }
  #introGrid {
    position: relative;
    margin-bottom: 10px;
    flex: 1 0 auto;

  }
  #introGrid .speedControls {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 50%;
    padding-top: 10px;
    border-top: 3px solid #fff;
    display: flex;
    justify-content: space-evenly;
    background-color: #f1f2f7;
    box-shadow: 0 1px 0 0px #ccc inset;
  }
  #taskIntro {
    flex: 1 0 50%;
    background-color: #fff;
    overflow: visible;
    padding-bottom: 50px;
  }
  #gridContainer {
    flex: 1 0 50%;
    min-width: 0;
  }
}
/* ... */

